[gd_scene load_steps=5 format=3 uid="uid://b3x524f6m4i62"]

[ext_resource type="Script" uid="uid://dsy3lskhoy4dn" path="res://scenes/unit/unit.gd" id="1_7kmaq"]
[ext_resource type="Texture2D" uid="uid://cnr81e8v8te12" path="res://scenes/unit/unit.png" id="2_1hh4o"]
[ext_resource type="Resource" uid="uid://4kwt8jlgpj2h" path="res://scenes/dialogue/narrator.dialogue" id="2_vh40f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q1txp"]
size = Vector2(32, 32)

[node name="Unit" type="Area2D"]
script = ExtResource("1_7kmaq")
dialogueFile = ExtResource("2_vh40f")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_1hh4o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 2
position = Vector2(0, -9.536743e-07)
scale = Vector2(0.9999998, 0.9999998)
shape = SubResource("RectangleShape2D_q1txp")

[node name="FoodTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="FoodTimer" to="." method="_on_food_timer_timeout"]
